change host param to url

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: <%= ENV["PARALLEL_CORPUS_DATABASE_HOST"]%>
+  url: <%= ENV["PARALLEL_CORPUS_DATABASE_HOST"]%>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
