--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@
 # Ignore bundler config.
 /.bundle
 
+/.idea/*
+/.idea/**/*
+/*.DS_Store
+/**/*.DS_Store
+
 # Ignore all environment files (except templates).
 /.env*
 !/.env*.erb
